rs/ethexe/macros-tests/tests/ui/validation_gservice_fails_for_solidity_reserved_name.rs
use sails_rs::prelude::*;

#[derive(Default)]
struct MyProgram;

struct MyService;

#[program]
impl MyProgram {}

#[service]
impl MyService {
    #[export]
    pub fn new(&mut self) -> u32 {
        42
    }
}

fn main() {}
